Rounded workspace corners in the overview take many seconds per frame on ASUS Eee PC/Intel Atom N570
Affected version
F34 Workstation ISO, GNOME 40.0, Wayland
Bug summary
When the overview is open so that workspaces with rounded corners are visible it takes 10 seconds to render every frame. Any other view is not affected, and disabling rounded corners by selecting the Workspace actors and doing r(0)._background._backgroundGroup.actor.get_first_child().content.set_rounded_clip_radius(0)
fixes the slow rendering.
Steps to reproduce
- Open the overview
Relevant logs, screenshots, screencasts etc.
This is an ASUS Eee PC from a few years back with an Intel Atom N570. glxinfo
indicates that it uses llvmpipe
.
cc @verdre
Edited by Ivan Molodetskikh